Update header layout
Created and styled the websites header section.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
     <title>Awesome Website</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <p class="logo">Header Logo</p>
+      <ul>
+        <li><a>header link one</a></li>
+        <li><a>header link two</a></li>
+        <li><a>header link three</a></li>
+      </ul>
+    </div>
+    <div class="hero">
+      <div class="left-hero">
+        <p class="main-text">This website is awesome</p>
+        <p>
+          This website has some subtext that does here under the main title.
+          It's a smaller font and the color is lower in contrast.
+        </p>
+        <button>Sign Up</button>
+      </div>
+      <div class="right-hero">
+        <p>this is a placeholder for an image</p>
+      </div>
+    </div>
+  </body>
 </html>
