Add hero section and fixed alignment of text
Created the hero section of the webpage and added the CSS for it. Also,
created a container class for alignment of elements within the page.

--- a/index.html
+++ b/index.html
@@ -8,24 +8,29 @@
   </head>
   <body>
     <div class="header">
-      <p class="logo">Header Logo</p>
-      <ul>
-        <li><a>header link one</a></li>
-        <li><a>header link two</a></li>
-        <li><a>header link three</a></li>
-      </ul>
+      <div class="container">
+        <p class="logo">Header Logo</p>
+        <ul>
+          <li><a>header link one</a></li>
+          <li><a>header link two</a></li>
+          <li><a>header link three</a></li>
+        </ul>
+      </div>
     </div>
     <div class="hero">
-      <div class="left-hero">
-        <p class="main-text">This website is awesome</p>
-        <p>
-          This website has some subtext that does here under the main title.
-          It's a smaller font and the color is lower in contrast.
-        </p>
-        <button>Sign Up</button>
-      </div>
-      <div class="right-hero">
-        <p>this is a placeholder for an image</p>
+        <div class="container">
+          <div class="left-hero">
+            <p class="main-text">This website is awesome</p>
+            <p class="hero-text">
+              This website has some subtext that does here under the main title.
+              It's a smaller font and the color is lower contrast.
+            </p>
+            <button>Sign Up</button>
+          </div>
+          <div class="right-hero">
+            <p>this is a placeholder for an image</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
