Add information section
Created and styled an information section, that includeds placeholders
for future images.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,38 @@
       </div>
     </div>
     <div class="hero">
-        <div class="container">
-          <div class="left-hero">
-            <p class="main-text">This website is awesome</p>
-            <p class="hero-text">
-              This website has some subtext that does here under the main title.
-              It's a smaller font and the color is lower contrast.
-            </p>
-            <button>Sign Up</button>
-          </div>
-          <div class="right-hero">
-            <p>this is a placeholder for an image</p>
-          </div>
+      <div class="container">
+        <div class="left-hero">
+          <p class="main-text">This website is awesome</p>
+          <p class="hero-text">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+          <button>Sign Up</button>
+        </div>
+        <div class="right-hero">
+          <p>this is a placeholder for an image</p>
+        </div>
+      </div>
+    </div>
+    <div class="info">
+      <h1>Some random information.</h1>
+      <div class="images">
+        <div class="image">
+          <div class="placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="image">
+          <div class="placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="image">
+          <div class="placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="image">
+          <div class="placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
         </div>
       </div>
     </div>
