--- a/index.html
+++ b/index.html
@@ -53,5 +53,17 @@
         </div>
       </div>
     </div>
+    <div class="quote-section">
+      <div class="quote-container">
+        <p>
+          <i
+            >This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.</i
+          >
+        </p>
+        <p class="quote-name">-Thor, God of Thunder</p>
+      </div>
+    </div>
   </body>
 </html>
