Add call to action section
Created a call to action section to the website. It is aligned in the
center of the website and includes a link button to take the user
to sign up.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,18 @@
             Who knows? All I know is that it looks nice.</i
           >
         </p>
-        <p class="quote-name">-Thor, God of Thunder</p>
+        <p class="quote-name">-Austin, Lord of Bees</p>
+      </div>
+    </div>
+    <div class="cta">
+      <div class="cta-container">
+        <div class="cta-text">
+          <p class="cta-title">Call to action! It's time!</p>
+          <p class="cta-subtext">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button>Sign up</button>
       </div>
     </div>
   </body>
